--- a/spec/shared/app_root/config/locales/en.yml
+++ b/spec/shared/app_root/config/locales/en.yml
@@ -13,11 +13,11 @@ en:
         pop: 'Pop music'
         rock: 'Rock music'
       year:
-        1977: 'The year a new hope was born'
-        1980: 'The year the Empire stroke back'
-        1983: 'The year the Jedi returned'
+        '1977': 'The year a new hope was born'
+        '1980': 'The year the Empire stroke back'
+        '1983': 'The year the Jedi returned'
     recording/vinyl:
       year:
-        1977: 'The year a new hope was born'
-        1980: 'The year the Empire stroke back'
-        1983: 'The year the Jedi returned'
+        '1977': 'The year a new hope was born'
+        '1980': 'The year the Empire stroke back'
+        '1983': 'The year the Jedi returned'
